force-app/main/default/objects/PMT_Phase__c/fields/Daily_progress__c.field-meta.xml
<CustomField>
    <fullName>Daily_progress__c</fullName>
    <formula>TEXT(100/ Length__c) &amp; &apos; %&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily progress</label>
    <type>Text</type>
</CustomField>