force-app/main/default/objects/PMT_Phase__c/fields/Days_to_go__c.field-meta.xml
<CustomField>
    <fullName>Days_to_go__c</fullName>
    <formula>Deadline_formula__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to go</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>