force-app/main/default/objects/PMT_Phase__c/fields/Deadline_formula__c.field-meta.xml
<CustomField>
    <fullName>Deadline_formula__c</fullName>
    <formula>IF(ISNULL(End_Date_Rollup__c),  IF(ISNULL( End_date_from_child__c), Project__r.Deadline_formula__c, End_date_from_child__c) , End_Date_Rollup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>