force-app/main/default/objects/PMT_Phase__c/fields/Expected_age_of_completion__c.field-meta.xml
<CustomField>
    <fullName>Expected_age_of_completion__c</fullName>
    <formula>IF( TODAY() &gt;  Deadline_formula__c , 100, ( TODAY() -  Kickoff_formula__c ) *  VALUE( SUBSTITUTE( Daily_progress__c , &apos; %&apos;, &apos;&apos;)  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected % age of completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>