force-app/main/default/objects/PMT_Phase__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <formula>Deadline_formula__c -  Kickoff_formula__c</formula>
    <label>Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>