force-app/main/default/objects/PMT_Phase__c/fields/Phase_Completion_Image__c.field-meta.xml
<CustomField>
    <fullName>Phase_Completion_Image__c</fullName>
    <formula>IMAGE(&quot;/resource/PMT_Status_Images/PMT_Percent_100.jpg&quot;, &quot;Completed&quot;, 10, ( Phase_Completion__c * 100 )/1.3) &amp; 
IMAGE(&quot;/resource/PMT_Status_Images/PMT_Percent_0.jpg&quot;, &quot;Zero&quot;, 10, (100 - Phase_Completion__c * 100 )/1.3) &amp; 
&apos; &apos; &amp; 
TEXT(ROUND(Phase_Completion__c * 100,0))&amp;&quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase Completion</label>
    <type>Text</type>
</CustomField>