force-app/main/default/objects/PMT_Phase__c/fields/Phase_Health__c.field-meta.xml
<CustomField>
    <fullName>Phase_Health__c</fullName>
    <label>Phase Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>On Track</fullName>
                <default>true</default>
                <label>On Track</label>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Late</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed, not Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>