force-app/main/default/objects/PMT_Phase__c/fields/Start_Date_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Rollup__c</fullName>
    <label>Start Date Rollup</label>
    <summarizedField>PMT_Task__c.Start_Date__c</summarizedField>
    <summaryForeignKey>PMT_Task__c.Phase__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>