force-app/main/default/objects/PMT_Phase__c/fields/Sum_of_tasks_count_child__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_tasks_count_child__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sum of tasks count child</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>