force-app/main/default/objects/PMT_Phase__c/fields/Sum_Weighted_perc__c.field-meta.xml
<CustomField>
    <fullName>Sum_Weighted_perc__c</fullName>
    <label>Sum Weighted %</label>
    <summarizedField>PMT_Task__c.Weighted_percentage__c</summarizedField>
    <summaryForeignKey>PMT_Task__c.Phase__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>