force-app/main/default/objects/PMT_Phase__c/validationRules/Kickoff_before_deadline.validationRule-meta.xml
<ValidationRule>
    <fullName>Kickoff_before_deadline</fullName>
    <active>true</active>
    <description>Phase Start date must be earlier than end date</description>
    <errorConditionFormula>NOT(ISNULL(Start_Date_Rollup__c)) &amp;&amp; 
NOT(ISNULL(End_Date_Rollup__c)) &amp;&amp; 
Start_Date_Rollup__c&gt;End_Date_Rollup__c</errorConditionFormula>
    <errorMessage>Phase End Date must be after Phase Start date.</errorMessage>
</ValidationRule>